<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/captureButton"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_capture_camera_24"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:backgroundTint="@android:color/transparent" />

    <ImageButton
        android:id="@+id/flashButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_flash_off_36"
        android:contentDescription="@string/flash_button_desc"
        android:backgroundTint="@android:color/transparent" />

    <ImageButton
        android:id="@+id/changeCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_flip_camera_ios_36"
        android:contentDescription="@string/flip_camera_desc"
        android:backgroundTintMode="multiply"
        android:backgroundTint="@android:color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>